✅ Ce qui a été créé
  Architecture complète

  - Backend Express.js avec authentification JWT, API REST et base SQLite
  - Frontend React + TypeScript avec interface professionnelle
  - Base de données avec tous les modèles requis (Users, Dossiers, Demandes, etc.)
  - Système d'auth complet avec rôles Admin/Utilisateur

  Fonctionnalités principales

  - Page de connexion sécurisée avec validation
  - Dashboard avec vue d'ensemble et statistiques
  - Gestion des dossiers avec table interactive, recherche, filtres
  - Modal de création/modification des dossiers avec validation Zod
  - Navigation responsive avec sidebar et protection des routes
  - Seed database avec utilisateurs et données de test

  Pour démarrer

  npm run dev

--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "winston": "^3.11.0",
-    "@carboneio/carbone": "^4.1.0",
+    "carbone": "^3.5.5",
     "exceljs": "^4.4.0",
     "dayjs": "^1.11.10",
     "zod": "^3.22.4",
