--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pf360-client",
   "version": "1.0.0",
+  "type": "module",
   "description": "Frontend React application for PF360",
   "dependencies": {
     "react": "^18.2.0",
