--- a/client/package.json
+++ b/client/package.json
@@ -4,32 +4,33 @@
   "type": "module",
   "description": "Frontend React application for PF360",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@tanstack/react-query": "^5.12.2",
-    "axios": "^1.6.2",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "@tanstack/react-table": "^8.10.7",
-    "tailwindcss": "^3.3.6",
-    "dayjs": "^1.11.10",
-    "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0"
+    "@hookform/resolvers": "^3.3.2",
+    "@tanstack/react-query": "^5.12.2",
+    "@tanstack/react-table": "^8.10.7",
+    "@tanstack/react-virtual": "^3.13.12",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.20.1",
+    "tailwindcss": "^3.3.6",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
-    "vite": "^5.0.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "@types/node": "^20.9.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   },
   "scripts": {
     "dev": "vite",
